force-app/main/default/objects/Opportunity__c/fields/Connection_and_Forum_template_URL__c.field-meta.xml
<CustomField>
    <fullName>Connection_and_Forum_template_URL__c</fullName>
    <label>Connection and Forum template URL</label>
    <type>Url</type>
</CustomField>