force-app/main/default/objects/Opportunity__c/fields/Connection_template_URL__c.field-meta.xml
<CustomField>
    <fullName>Connection_template_URL__c</fullName>
    <label>Connection template URL</label>
    <type>Url</type>
</CustomField>