force-app/main/default/objects/Opportunity__c/fields/Forum_Template_URL__c.field-meta.xml
<CustomField>
    <fullName>Forum_Template_URL__c</fullName>
    <label>Forum Template URL</label>
    <type>Url</type>
</CustomField>