force-app/main/default/objects/Opportunity__c/fields/Parent_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>Parent_Folder_URL__c</fullName>
    <label>Parent Folder URL</label>
    <type>Url</type>
</CustomField>