force-app/main/default/objects/Opportunity__c/fields/Quip_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Quip_Site_URL__c</fullName>
    <label>Quip Site URL</label>
    <type>Url</type>
</CustomField>